# xmrig

./: CMakeLists.txt  README.md
cmake/: fishhash.cmake  hoohash.cmake  hoohashv1.cmake  timefetcher.cmake
scripts/: build_curl.sh  build_deps.sh
src/: donate.h  version.h
src/base/crypto/: Algorithm.cpp  Algorithm.h  Coin.cpp  Coin.h
src/base/net/stratum/: AutoClient.cpp  Client.cpp  Client.h
src/crypto/fishhash/: CMakeLists.txt  FishHash.cpp
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h  TimeFetcher.cpp  TimeFetcher.h
